--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hoek-boom",
   "version": "1.0.0",
-  "description": "Node utilities shared amongst the extended hapi universe with some boom sprinkles",
-  "main": "index.js",
+  "description": "Extending node utilities shared amongst the extended hapi universe with some boom sprinkles",
+  "main": "index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test-cov"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,14 @@
   },
   "homepage": "https://github.com/mrlannigan/hoek-boom",
   "dependencies": {
-    "boom": "^2.6.1",
-    "hoek": "^2.10.0"
+    "boom": "^2.6.x",
+    "hoek": "^2.10.x"
+  },
+  "devDependencies": {
+    "code": "^1.2.x",
+    "lab": "^5.1.x"
+  },
+  "engines": {
+    "node": ">=0.8.0"
   }
 }
